--- a/pwi_23_08_21.ipynb
+++ b/pwi_23_08_21.ipynb
@@ -21,6 +21,7 @@
     "import requests\n",
     "from urllib import request\n",
     "from PIL import Image\n",
+    "# zzzzz\n",
     "\n",
     "\n",
     "def remove_last_dot(input_string):\n",
